--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,52 @@
 
 @layer base {
   body {
-    @apply bg-slate-800 text-slate-50;
+    @apply bg-slate-800 text-slate-200;
+  }
+
+  a {
+    @apply text-primary-500 hover:text-primary-700;
+  }
+
+  h1,
+  h2,
+  h3 {
+    @apply font-bold;
+  }
+
+  h1 {
+    @apply text-4xl;
+  }
+
+  h2 {
+    @apply text-2xl;
+  }
+
+  h3 {
+    @apply text-lg;
+  }
+
+  h4 {
+    @apply text-base;
+  }
+
+  [type="text"],
+  [type="email"],
+  [type="password"] {
+    @apply w-full rounded-lg border-none bg-slate-700 placeholder:text-slate-300 focus:border-primary-500 focus:ring-primary-500;
+  }
+
+  [type="checkbox"],
+  [type="radio"] {
+    @apply rounded border-none bg-slate-700 text-primary-500 focus:ring-primary-500;
+  }
+
+  button,
+  [type="submit"] {
+    @apply inline-block rounded bg-primary-500 px-4 py-2 font-medium;
+  }
+
+  label {
+    @apply mb-2 block;
   }
 }
