--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,10 +46,20 @@
 
   button,
   [type="submit"] {
-    @apply inline-block rounded bg-primary-500 px-4 py-2 font-medium;
+    @apply inline-block rounded bg-primary-500 px-4 py-2 font-medium focus:ring-2;
   }
 
   label {
     @apply mb-2 block;
+  }
+
+  .btn {
+    @apply relative inline-flex items-center justify-center space-x-2 rounded px-4 py-2 font-medium focus:ring-2;
+  }
+  .btn.btn-primary {
+    @apply bg-primary-500 text-slate-50 hover:text-slate-50;
+  }
+  .btn.btn-outline {
+    @apply bg-transparent text-slate-200;
   }
 }
